--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -37,12 +37,12 @@
 	--sidebar-border: oklch(0.9288 0.0126 255.5078);
 	--sidebar-ring: oklch(0.7012 0.1572 258.7632);
 	--font-sans:
-		-apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial,
-		sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+		Ubuntu, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica,
+		Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
 	--font-serif: Georgia, serif;
 	--font-mono:
-		SFMono-Regular, Menlo, Monaco, Consolas, Liberation Mono, Courier New,
-		monospace;
+		"Ubuntu Mono", SFMono-Regular, Menlo, Monaco, Consolas, Liberation Mono,
+		Courier New, monospace;
 	--radius: 0.5rem;
 	--shadow-x: 0;
 	--shadow-y: 0.25rem;
@@ -101,12 +101,12 @@
 	--sidebar-border: oklch(0.4128 0 0);
 	--sidebar-ring: oklch(0.7012 0.1572 258.7632);
 	--font-sans:
-		-apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial,
-		sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+		Ubuntu, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica,
+		Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
 	--font-serif: Georgia, serif;
 	--font-mono:
-		SFMono-Regular, Menlo, Monaco, Consolas, Liberation Mono, Courier New,
-		monospace;
+		"Ubuntu Mono", SFMono-Regular, Menlo, Monaco, Consolas, Liberation Mono,
+		Courier New, monospace;
 	--radius: 0.5rem;
 	--shadow-x: 0;
 	--shadow-y: 0.25rem;
