--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -36,13 +36,9 @@
 	--sidebar-accent-foreground: oklch(0.2046 0 0);
 	--sidebar-border: oklch(0.9288 0.0126 255.5078);
 	--sidebar-ring: oklch(0.7012 0.1572 258.7632);
-	--font-sans:
-		Ubuntu, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica,
-		Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
-	--font-serif: Georgia, serif;
-	--font-mono:
-		"Ubuntu Mono", SFMono-Regular, Menlo, Monaco, Consolas, Liberation Mono,
-		Courier New, monospace;
+	--font-sans: Ubuntu, ui-sans-serif, sans-serif, system-ui;
+	--font-serif: DM Serif Text, ui-serif, serif;
+	--font-mono: Ubuntu Sans Mono, ui-monospace, monospace;
 	--radius: 0.5rem;
 	--shadow-x: 0;
 	--shadow-y: 0.25rem;
@@ -63,7 +59,7 @@
 	--shadow-xl:
 		0 0.25rem 0.5rem 0 hsl(0 0% 0% / 0.1), 0 8px 10px -1px hsl(0 0% 0% / 0.1);
 	--shadow-2xl: 0 0.25rem 0.5rem 0 hsl(0 0% 0% / 0.25);
-	--tracking-normal: 0;
+	--tracking-normal: 0.025em;
 	--spacing: 0.25rem;
 }
 
@@ -79,7 +75,7 @@
 	--secondary: oklch(0.4128 0 0);
 	--secondary-foreground: oklch(0.9067 0 0);
 	--muted: oklch(0.4128 0 0);
-	--muted-foreground: oklch(0.9067 0 0);
+	--muted-foreground: oklch(0.709 0 0);
 	--accent: oklch(0.4128 0 0);
 	--accent-foreground: oklch(0.9067 0 0);
 	--destructive: oklch(0.6368 0.2078 25.3313);
@@ -100,13 +96,9 @@
 	--sidebar-accent-foreground: oklch(0.9067 0 0);
 	--sidebar-border: oklch(0.4128 0 0);
 	--sidebar-ring: oklch(0.7012 0.1572 258.7632);
-	--font-sans:
-		Ubuntu, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica,
-		Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
-	--font-serif: Georgia, serif;
-	--font-mono:
-		"Ubuntu Mono", SFMono-Regular, Menlo, Monaco, Consolas, Liberation Mono,
-		Courier New, monospace;
+	--font-sans: Ubuntu, ui-sans-serif, sans-serif, system-ui;
+	--font-serif: DM Serif Text, ui-serif, serif;
+	--font-mono: Ubuntu Sans Mono, ui-monospace, monospace;
 	--radius: 0.5rem;
 	--shadow-x: 0;
 	--shadow-y: 0.25rem;
